add delete of submodel theor test
