# src/docs/swagger.json
@@ -384,7 +384,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "add questions to Theor test",
+                "description": "update Theor test",
                 "consumes": [
                     "application/json"
                 ],
@@ -394,7 +394,7 @@
                 "tags": [
                     "module"
                 ],
-                "summary": "add questions to Theor test",
+                "summary": "update Theor test",
                 "parameters": [
                     {
                         "description": "Theor test info",
@@ -487,6 +487,59 @@
                         "schema": {
                             "$ref": "#/definitions/module.AddTheorTestResp"
                         }
+                    },
+                    "400": {
+                        "description": "some user error",
+                        "schema": {
+                            "$ref": "#/definitions/err.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "not auth",
+                        "schema": {
+                            "$ref": "#/definitions/err.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "module not found",
+                        "schema": {
+                            "$ref": "#/definitions/err.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "internal",
+                        "schema": {
+                            "$ref": "#/definitions/err.Error"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "delete Theor test",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "module"
+                ],
+                "summary": "delete Theor test",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id of submodule",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
                     },
                     "400": {
                         "description": "some user error",
@@ -1065,6 +1118,20 @@
                 }
             }
         },
+        "module.UpdateAnswersReq": {
+            "type": "object",
+            "properties": {
+                "answer": {
+                    "type": "string"
+                },
+                "correct": {
+                    "type": "boolean"
+                },
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
         "module.UpdateConfigReq": {
             "type": "object",
             "properties": {
@@ -1074,13 +1141,42 @@
                 }
             }
         },
+        "module.UpdateQuestionReq": {
+            "type": "object",
+            "properties": {
+                "answers": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/module.UpdateAnswersReq"
+                    }
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "newAnswers": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/module.CreateAnswerReq"
+                    }
+                },
+                "question": {
+                    "type": "string"
+                }
+            }
+        },
         "module.UpdateTheorTestReq": {
             "type": "object",
             "properties": {
-                "questions": {
+                "newQuestions": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/module.CreateQuestionReq"
+                    }
+                },
+                "questions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/module.UpdateQuestionReq"
                     }
                 }
             }
